<resources>
    <string name="app_name">SafeShelter</string>

    <string name="name_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="register_text">Register</string>
    <string name="email_text">Email</string>
    <string name="cnf_password_text">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="login_text">Login</string>

    <!--  BOTÃO SOS -->
    <string name="SOS_pref">Botao SOS</string>
    <string name="SOS_pref_summary">Comunições em caso de emergência</string>

    <!-- FILTRO APPS -->
    <string name="AppFilter">Filtro de Apps</string>
    <string-array name="AppFilter_Type_Entries">
        <item>JogoMemoria</item>
        <item>YoutubeKids</item>
        <item>Quiz</item>
        <item>Paint</item>
    </string-array>

    <string-array name="AppFilter_entries_Strings">
        <item>Jogo Memoria</item>
        <item>Youtube Kids</item>
        <item>Quiz</item>
        <item>Paint</item>
    </string-array>

    <!-- CODIGO PARENTAL -->
    <string name="Parental_Code">Codigo Parental</string>
    <string name="Parental_Code_Summary">Alteração do código parental da App</string>

    <!-- CHAMADAS E SMS -->
    <string name="Calls_Texts_Permissions">Permissões de chamadas e mensagens</string>
    <string name="Calls_Texts_Permissions_Summary">Alterar definições de chamadas e mensagens</string>

    <string-array name="Calls_Texts_Permissions_Type_Entries">
        <item>AllowCalls</item>
        <item>AllowMessages</item>
    </string-array>

    <string-array name="Calls_Texts_Permissions_Entries_Strings">
        <item>Permitir Chamadas</item>
        <item>Permitir Mensagens</item>
    </string-array>

    <!-- TIME LIMIT -->
    <string name="Time_Limit">Tempo de Utilização</string>
    <string name="Time_Limit_Summary">Definir tempo de utilizacao</string>

    <!-- LOCATION -->
    <string name="Location">Localização</string>
    <string name="Location_Summary">Definições de localização</string>
    <string name="title_activity_settings">Settings</string>

    <!-- PROFILE -->
    <string name="Profile">Perfil</string>
    <string name="Profile_Summary">O seu perfil</string>

    <!-- LOG OUT -->
    <string name="Log_Out">Log out</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="child_name_text">Child\'s Name</string>

    <!-- Quiz app -->
    <string name="question_number">1/9</string>
    <string name="question_label">Pergunta</string>
    <string name="btn_sumbit">Inserir</string>
    <string name="checkbox_label">Resposta</string>
    <string name="radio_label">Resposta</string>
    <string name="edit_text_hint">Insere a resposta aqui ..</string>

    <!-- Choose Parental Code -->
    <string name="choose_code">Defina o Código Parental</string>
    <string name="first_code">Insira o código parental</string>
    <string name="second_code">Insira novamente o código parental</string>
    <string name="submit_code">Definir código</string>

    <!-- Change Parental Code -->
    <string name="change_code">Altere o Código Parental</string>
    <string name="change_first_code">Insira o código parental atual</string>
    <string name="change_second_code">Insira o novo código parental</string>
    <string name="submit_change_code">Mudar código</string>

    <!-- Insert Parental Code -->
    <string name="insert_code">Insira o Código Parental</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Limpar</string>
    <string name="btn_backspace">Apagar</string>

    <string name="select_maze_title">TiltMazes - Select maze</string>

    <string name="menu_restart">Restart</string>
    <string name="menu_map_prev">Previous</string>
    <string name="menu_map_next">Next</string>
    <string name="menu_select_maze">Select maze</string>
    <string name="menu_sensor">Sensor</string>
    <string name="menu_about">About</string>

    <string name="locked_out">Tempo de utilização terminou</string>
    <string name="return_settings">Voltar para Settings</string>

    <string name="youtube_kids">Youtube Kids</string>
    <string name="quiz">Quiz</string>
    <string name="maze">Maze</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="filter">Filtrar</string>
    <string name="filter_title">Escolha as apps que deseja no menu principal</string>
</resources>
