<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- FILTRO APPS -->
    <MultiSelectListPreference
        android:key="AppFilter"
        android:title="@string/AppFilter"
        android:entries="@array/AppFilter_entries_Strings"
        android:entryValues="@array/AppFilter_Type_Entries"
        app:iconSpaceReserved="false"
        />

    <!-- CODIGO PARENTAL -->
    <Preference
        android:key="dialog_preference"
        android:title="@string/Parental_Code"
        android:summary="@string/Parental_Code_Summary"
        app:iconSpaceReserved="false">

        <intent
            android:action="chooseParentalCode"
            android:targetPackage="com.example.safeshelter"
            android:targetClass="com.example.safeshelter.ChangeParentalCode" />
    </Preference>

    <!-- TIME LIMIT -->
    <Preference
        android:key="Time_Limit"
        android:title="@string/Time_Limit"
        android:summary="@string/Time_Limit_Summary"
        app:iconSpaceReserved="false">

        <intent
            android:action="timeLimit"
            android:targetPackage="com.example.safeshelter"
            android:targetClass="com.example.safeshelter.OutOfTimeActivity" />
    </Preference>

    <!-- LOCALIZAÇÃO -->
    <Preference
        android:key="Location"
        android:title="@string/Location"
        android:summary="@string/Location_Summary"
        app:iconSpaceReserved="false">

    <intent
        android:action="android.intent.action.VIEW"
        android:targetPackage="com.example.safeshelter"
        android:targetClass="com.example.safeshelter.LocationActivity"
        />
    </Preference>

    <!-- PERFIL -->
    <Preference
        android:key="Profile"
        android:title="@string/Profile"
        android:summary="@string/Profile_Summary"
        app:iconSpaceReserved="false">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.safeshelter"
            android:targetClass="com.example.safeshelter.ProfileActivity"
        />
    </Preference>

    <!-- LOG OUT -->
    <Preference
        android:key="Log_Out"
        android:title="@string/Log_Out"
        app:iconSpaceReserved="false">

        <intent
            android:action="logout"
            android:targetPackage="com.example.safeshelter"
            android:targetClass="com.example.safeshelter.HomeActivity" />
    </Preference>

</PreferenceScreen>