<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.miniapps.quiz.QuizActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_question_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/fab_margin"
                android:text="@string/question_number" />

            <TextView
                android:id="@+id/text_view_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/fab_margin"
                android:text="@string/question_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <ImageView
                android:id="@+id/image_view_question_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitCenter"
                android:src="@drawable/lion" />

            <FrameLayout
                android:id="@+id/frame_answer_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </FrameLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/btn_sumbit" />
</LinearLayout>